# PaSR

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakeLists_macos.txt  CMakeLists_quartz.txt  CMakeLists_yellowstone.txt  LICENSE  README.md
sample/: input.toml
sample/ch4/: input.toml
sample/droplet_array/: chem.yaml  input.toml
sample/h2/: h2_ucsd.yaml  input.toml
src/: DropletArray.cpp  DropletArray.h  Histogram.cpp  Histogram.h  Injector.cpp  Injector.h  PartiallyStirredReactor.cpp  PartiallyStirredReactor.h  Particle.cpp  Particle.h  Reactor.cpp  Reactor.h  Solver.cpp  Solver.h  ark_heat2D.cpp  common.h  pasr.cpp  solver.cpp  test.cpp
tools/: build_array.py  build_hists.py  csv_to_hdf.py  detect_started.py  extract_last_n.py  plot_ext_array.py  plot_ext_array_all.py  plot_ext_array_sample.py  plot_scatter.py  plot_test.py  search_ext.py
